[package]
name = "qmc_sse"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
num-traits = "0.2"
log = "0.4"
rustfft = {version = "6.4", optional = true}

[features]
default = ["autocorrelations"]
# Calculate autocorrelation lengths for various functions of the sampled states.
autocorrelations = ["rustfft"]

[dev-dependencies]
env_logger = "0.11"
