[package]
name = "qmc"
version = "3.0.0-rc1"
edition = "2024"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
description = "Quantum Monte Carlo simulations in Rust"
documentation = "https://docs.rs/qmc/"
repository = "https://github.com/Renmusxd/QMC_SSE"
license = "GPL-3"
license-file = "LICENSE"

[dependencies]
rand = "0.9"
num-traits = "0.2"
log = "0.4"
rustfft = {version = "6.4", optional = true}

[features]
default = ["autocorrelations"]
# Calculate autocorrelation lengths for various functions of the sampled states.
autocorrelations = ["rustfft"]

[dev-dependencies]
env_logger = "0.11"

[profile.release]
panic = "abort"